# qa_guru_8_python_hw_18_poetry

./: README.md  pyproject.toml
tests/: test_demoqa_practice_form.py
